Fixed nav padding/centering, but not spacing

--- a/styles.css
+++ b/styles.css
@@ -9,19 +9,18 @@ nav {
     flex-direction: row;
     justify-content: center;
     margin: 0;
+    padding: 0 15px;
     background-color: rgba(34, 55, 100, 0.993);
 }
 
 .header-title {
     color: white;
-    margin: 15px;
 }
 
 ul {
     list-style-type: none;
     display: inline-flex;
     margin-left: auto;
-    padding: 10px;
     align-items: center;
     justify-self: space-between;
     font-size: 15px;
@@ -34,11 +33,6 @@ a {
     font-weight: bold;
     display: flex;
     flex: 1;
-    align-items: center;
-    margin-left: auto;
-
-
-
 }
 
 a:hover {
